--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "ioredis": "^5.0.0",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^9.0.0",
     "ts-node-dev": "^2.0.0",
